<?xml version="1.0" encoding="utf-8"?>
<!--
 AUTOR: LEONARDO DANIEL AVIÑA NERI
 GRUPO: 6PRAM
 TODOS LOS DERECHOS RESERVADOS
 -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chikendinner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.chikendinner.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.chikendinner.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_verVentas"
        android:name="com.example.chikendinner.ui.VerVentas"
        android:label="@string/title_show_ventas"
        tools:layout="@layout/fragment_ver_ventas" />
    <fragment
        android:id="@+id/navigation_verProductos"
        android:name="com.example.chikendinner.ui.VerProductos"
        android:label="@string/title_show_products"
        tools:layout="@layout/fragment_ver_productos" />
</navigation>