<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ver_venta_producto">

    <!-- TODO: Update blank fragment layout -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/tb_ventas_prod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/btnEditar"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_edit" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/btnBorrar"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/coiny"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/sp_id"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/coiny"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/svp_venta_id"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/coiny"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/svp_producto_id"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/coiny"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/d_cantidad"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/coiny"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/sv_ingresos"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>


        </TableLayout>
    </HorizontalScrollView>

</FrameLayout>