<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VerVentas">

    <!--
     AUTOR: LEONARDO DANIEL AVIÑA NERI
     GRUPO: 6PRAM
     TODOS LOS DERECHOS RESERVADOS
     -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/titan_one"
                android:gravity="center"
                android:paddingTop="50dp"
                android:paddingBottom="15dp"
                android:text="@string/sv_titulo"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TableLayout
                    android:id="@+id/sv_tb_ventas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="18dp">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:contentDescription="@string/btnEditar"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:src="@drawable/ic_edit" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:contentDescription="@string/btnBorrar"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_delete" />

                        <TextView
                            android:id="@+id/textView34"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:text="@string/sp_id"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="75dp"
                            android:paddingRight="75dp"
                            android:text="@string/sv_dia"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:text="@string/sv_ingresos"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="gone">

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:buttonTint="@color/white" />

                        <CheckBox
                            android:id="@+id/checkBox2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/white" />

                        <TextView
                            android:id="@+id/textView36"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/h_"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/h_"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/h_"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </TableRow>


                </TableLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/table_empty2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/coiny"
                    android:text="@string/sp_vacio"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/nothing" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_autor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="240dp"
                android:layout_marginBottom="70dp"
                android:layout_weight="3"
                android:fontFamily="@font/coiny"
                android:text="@string/autor"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp">

                <TableLayout
                    android:id="@+id/tb_ventas_prod2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/coiny"
                        android:text="@string/sv_tbIntermedia"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="18dp">

                        <TextView
                            android:id="@+id/te34"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:text="@string/sp_id"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tw7"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/svp_venta_id"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/te14"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:text="@string/svp_producto_id"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView41"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:text="@string/d_cantidad"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView42"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/coiny"
                            android:gravity="center_horizontal|center_vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:text="@string/sv_ingresos"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </TableRow>


                </TableLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>


</FrameLayout>